Adding default image logic to web view

--- a/sites/stamped.com/bin/www/templates/sdetail-mobile.html
+++ b/sites/stamped.com/bin/www/templates/sdetail-mobile.html
@@ -57,7 +57,7 @@
                     <div class="inner">
                         <div class="meta">
                             <div class="thumb">
-                                <img src="http://static.stamped.com/users/{{ user.screen_name }}-92x92.jpg"/>
+                                <img src="{{ image_url_92 }}"/>
                             </div>
                             <div class="copy">
                                 <h1>{{ title }}</h1> 
