--- a/sites/stamped.com/bin/www/templates/sdetail-mobile.html
+++ b/sites/stamped.com/bin/www/templates/sdetail-mobile.html
@@ -60,7 +60,7 @@
                                 <img src="{{ image_url_92 }}"/>
                             </div>
                             <div class="copy">
-                                <h1>{{ title }}</h1> 
+                                <h1>{{ entity.title }}</h1> 
                                 <span class="type {{ entity.category }}">{{ entity.subtitle }}</span> 
                             </div>
                         </div>
@@ -69,7 +69,7 @@
                             <p>{{ blurb }}</p> 
                             {% if image_dimensions %}
                             <div class="photo">
-                                <img src="http://static.stamped.com/stamps/{{ stamp_id }}.jpg" alt="{{ title }}" width="572px"/>
+                                <img src="http://static.stamped.com/stamps/{{ stamp_id }}.jpg" alt="{{ entity.title }}" width="572px"/>
                             </div>
                             {% endif %}
                             {% if credit %}
